--- a/App.Web/Views/DoctorPole/Create.cshtml
+++ b/App.Web/Views/DoctorPole/Create.cshtml
@@ -5,7 +5,7 @@
         HttpMethod = "POST",
         UpdateTargetId = "dialog1Body",
         InsertionMode = InsertionMode.Replace,
-        OnSuccess = "openDialog1('Save')",
+        OnSuccess = "openDialog1('Staff Profile')",
         LoadingElementId = "loading",
         OnFailure = "failure"
     };
@@ -15,30 +15,22 @@
     @Html.ValidationSummary(true)
 <table class="table table-striped table-bordered fixed_headers">
     <tr>
-        <td class="title">
-            Staff PIN
-        </td>
-        <td class="control">
-            @Html.TextBoxFor(model => model.PIN_)
+        <th>
+            Staff PIN / Mobile Number        
+        </th>       
+    </tr>
+    <tr>
+        <td>
+            @Html.TextBoxFor(model => model.PIN_, new { @placeholder = "Staff PIN" })
             @Html.ValidationMessageFor(model => model.PIN_)
-        </td>
-    </tr>
-    <tr>
-        <td class="title">
-            OR Staff Mobile No (if can't say PIN)
-        </td>
-        <td class="control">
-            @Html.TextBoxFor(model => model.MobileNo_)
+            OR
+            @Html.TextBoxFor(model => model.MobileNo_, new { @placeholder = "Staff Mobile No" })
             @Html.ValidationMessageFor(model => model.MobileNo_)
+
+            <input id="save-submit" type="submit" value="Next" class="btn btn-primary" />
         </td>
-    </tr>    
-    <tr>
-        <td class="control">
-            <p>
-                <input id="save-submit" type="submit" value="Next" class="btn btn-primary" />
-            </p>
-        </td>
-    </tr>
+    </tr>   
+   
 </table>
 
 }
@@ -47,7 +39,11 @@
     $(document).ready(function () {
 
         $("#save-submit").click(function () {
-
+            if ($("#PIN_").val() == '' && $("#MobileNo_").val() == '')
+            {
+                alert('Please enter BRAC Staff PIN or Mobile Number');
+                return false;
+            }
         });
 
         //$('#DivisionId').change(function (event) {
